WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40454
Fix fast/forms/preserveFormDuringResidualStyle.html for HTML5 Parser
https://bugs.webkit.org/show_bug.cgi?id=40454
Summary
Fix fast/forms/preserveFormDuringResidualStyle.html for HTML5 Parser
Tony Gentilcore
Reported
2010-06-10 17:12:19 PDT
Fix fast/forms/preserveFormDuringResidualStyle.html
Attachments
Patch
(5.54 KB, patch)
2010-06-10 17:16 PDT
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
Preserve check for null tokenizer
(5.42 KB, patch)
2010-06-11 09:04 PDT
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Gentilcore
Comment 1
2010-06-10 17:16:53 PDT
Created
attachment 58423
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-06-10 17:24:39 PDT
Comment on
attachment 58423
[details]
Patch Wonderful!
Adam Barth
Comment 3
2010-06-10 18:17:22 PDT
Oh man. Maybe we should grep the codebase for static_cast<HTMLTokenizer*>
Adam Barth
Comment 4
2010-06-10 22:29:01 PDT
Comment on
attachment 58423
[details]
Patch Clearing flags on attachment: 58423 Committed
r60989
: <
http://trac.webkit.org/changeset/60989
>
Adam Barth
Comment 5
2010-06-10 22:29:07 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-06-10 22:39:16 PDT
http://trac.webkit.org/changeset/60989
might have broken GTK Linux 64-bit Debug and Qt Linux Release
Adam Barth
Comment 7
2010-06-10 22:41:58 PDT
Seems to cause crashes: dom/html/level2/html/HTMLBodyElement07.html stderr dom/html/level2/html/HTMLBodyElement08.html stderr dom/html/level2/html/HTMLBodyElement09.html stderr dom/html/level2/html/HTMLBodyElement10.html stderr dom/html/level2/html/HTMLBodyElement11.html stderr dom/html/level2/html/HTMLBodyElement12.html stderr dom/html/level2/html/HTMLButtonElement01.html stderr dom/html/level2/html/HTMLButtonElement02.html stderr dom/html/level2/html/HTMLButtonElement03.html stderr dom/html/level2/html/HTMLButtonElement04.html stderr dom/html/level2/html/HTMLButtonElement05.html stderr dom/html/level2/html/HTMLButtonElement06.html stderr dom/html/level2/html/HTMLButtonElement07.html stderr dom/html/level2/html/HTMLButtonElement08.html stderr dom/html/level2/html/HTMLCollection01.html stderr dom/html/level2/html/HTMLCollection02.html stderr dom/html/level2/html/HTMLCollection03.html stderr dom/html/level2/html/HTMLCollection04.html stderr dom/html/level2/html/HTMLCollection05.html stderr dom/html/level2/html/HTMLCollection06.html stderr
Tony Gentilcore
Comment 8
2010-06-11 09:04:04 PDT
Created
attachment 58481
[details]
Preserve check for null tokenizer
WebKit Review Bot
Comment 9
2010-06-11 09:05:36 PDT
Attachment 58481
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/dom/Tokenizer.h:28: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 10
2010-06-11 10:28:14 PDT
Comment on
attachment 58481
[details]
Preserve check for null tokenizer LGTM.
WebKit Commit Bot
Comment 11
2010-06-11 11:46:37 PDT
Comment on
attachment 58481
[details]
Preserve check for null tokenizer Clearing flags on attachment: 58481 Committed
r61028
: <
http://trac.webkit.org/changeset/61028
>
WebKit Commit Bot
Comment 12
2010-06-11 11:46:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug