WebCore/html/HTMLTokenizer.h
@@ -163,9 +163,8 @@ public:
     
     virtual void executeScriptsWaitingForStylesheets();
     
-    virtual bool isHTMLTokenizer() const { return true; }
+    virtual HTMLParser* htmlParser() const { return m_parser.get(); }
     virtual HTMLTokenizer* asHTMLTokenizer() { return this; }
-    HTMLParser* htmlParser() const { return m_parser.get(); }
 
 private:
     class State;
